Fixed more Java 23 deprecation warnings