@@ -173,7 +173,7 @@ public class mxCodecRegistry
 			{
 				try
 				{
-					return clazz.newInstance();
+					return clazz.getDeclaredConstructor().newInstance();
 				}
 				catch (Exception e)
 				{
